<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/transparent" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:orientation="vertical" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:id="@+id/dialog_reminders_add_rootView"
        android:background="@drawable/shape_reminders_dialog"
        android:padding="20dp">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/AddDialogTitle"
        android:textSize="30dp"
        android:textColor="@color/mainLightAccent"
        android:textStyle="bold"
        />

        <EditText
            android:id="@+id/reminderContent"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/mainLightAccent"
            android:buttonTint="@color/mainLightAccent"/>

        <RadioGroup
            android:id="@+id/addRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/ideaButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RemType1"
                android:textSize="25dp"
                android:textColor="@color/mainLightAccent"
                android:buttonTint="@color/mainLightAccent" />
            <RadioButton
                android:id="@+id/oweButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RemType2"
                android:textSize="25dp"
                android:textColor="@color/mainLightAccent"
                android:buttonTint="@color/mainLightAccent"/>
            <RadioButton
                android:id="@+id/tofixButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RemType3"
                android:textSize="25dp"
                android:textColor="@color/mainLightAccent"
                android:buttonTint="@color/mainLightAccent"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp">
            <Button
                android:id="@+id/cancel_reminders_butt"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:textSize="25dp"
                android:text="@string/Cancel"
                android:background="@drawable/shape_reminders_button"
                android:textColor="@color/mainPrimaryDark"
                android:layout_margin="7dp"/>
            <Button
                android:id="@+id/add_reminders_butt"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:textSize="25dp"
                android:text="@string/Add"
                android:background="@drawable/shape_reminders_button"
                android:textColor="@color/mainPrimaryDark"
                android:layout_margin="7dp"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>