<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/transparent" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:orientation="vertical" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:id="@+id/dialog_reminders_add_rootView"
        android:background="@drawable/shape_reminders_dialog"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/AddDialogTitleWishlist"
            android:textSize="30dp"
            android:textColor="@color/mainLightAccent"
            android:textStyle="bold"
            />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ShopProductlistName"
                android:textColor="@color/mainLightAccent"
                android:buttonTint="@color/mainLightAccent"
                android:textSize="20dp"/>
            <EditText
                android:id="@+id/dialog_shopping_productlist_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/mainLightAccent"
                android:buttonTint="@color/mainLightAccent"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ShopProductlistType"
                android:textColor="@color/mainLightAccent"
                android:buttonTint="@color/mainLightAccent"
                android:textSize="20dp"/>
            <Spinner
                android:id="@+id/dialog_shopping_productlist_edit_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/mainLightAccent"
                android:layout_marginLeft="20dp"
                android:buttonTint="@color/mainPrimaryDark"
                android:backgroundTint="@color/mainPrimaryDark"
                android:foregroundTint="@color/mainPrimaryDark"
                android:background="@color/mainPrimaryDark"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ShopProductlistPriceRange"
                android:textColor="@color/mainLightAccent"
                android:buttonTint="@color/mainLightAccent"
                android:textSize="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/dialog_shopping_productlist_edit_pmin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textColor="@color/mainLightAccent"
                    android:buttonTint="@color/mainLightAccent"
                    android:textSize="20dp"/>
                <EditText
                    android:id="@+id/dialog_shopping_productlist_edit_pmax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textColor="@color/mainLightAccent"
                    android:buttonTint="@color/mainLightAccent"
                    android:textSize="20dp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp">
            <Button
                android:id="@+id/cancel_reminders_butt"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:text="@string/Cancel"
                android:background="@drawable/shape_reminders_button"
                android:textColor="@color/mainPrimaryDark"
                android:layout_margin="7dp"/>
            <Button
                android:id="@+id/basket_wishlist_butt"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:text="@string/Add"
                android:background="@drawable/shape_reminders_button"
                android:textColor="@color/mainPrimaryDark"
                android:layout_margin="7dp"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
