<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_day_event_rectangle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="7dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="20dp"
            android:textColor="@color/mainLightAccent"
            android:text="@string/EventName"/>

        <EditText
            android:id="@+id/dialog_events_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/mainLightAccent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="7dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="20dp"
            android:textColor="@color/mainLightAccent"
            android:text="@string/EventStartHour"/>

        <EditText
            android:id="@+id/dialog_events_starthour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/mainLightAccent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="7dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="20dp"
            android:textColor="@color/mainLightAccent"
            android:text="@string/EventEndHour"/>

        <EditText
            android:id="@+id/dialog_events_endhour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/mainLightAccent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="7dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="20dp"
            android:textColor="@color/mainLightAccent"
            android:text="@string/EventRepeatance"/>

        <EditText
            android:id="@+id/dialog_events_repeatance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="20dp"
            android:textColor="@color/mainLightAccent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="7dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="20dp"
            android:text="@string/EventRepeatanceUnit"
            android:textColor="@color/mainLightAccent"/>
        <Spinner
            android:id="@+id/dialog_events_repeatanceunit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/mainLightAccent"
            android:background="@color/mainLightAccent"
            android:layout_marginLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="7dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="20dp"
            android:textColor="@color/mainLightAccent"
            android:text="@string/EventUrgencyLevel"/>
        <EditText
            android:id="@+id/dialog_events_urgency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="20dp"
            android:textColor="@color/mainLightAccent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="7dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="20dp"
            android:textColor="@color/mainLightAccent"
            android:text="@string/EventDescription"/>

        <EditText
            android:id="@+id/dialog_events_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20dp"
            android:textColor="@color/mainLightAccent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/cancel_event_view"
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_day_event_rectangle"
            android:padding="5dp"
            android:textSize="20dp"
            android:textColor="@color/mainLightAccent"
            android:text="Cancel"/>
        <Button
            android:id="@+id/save_event_view"
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_day_event_rectangle"
            android:padding="5dp"
            android:textSize="20dp"
            android:textColor="@color/mainLightAccent"
            android:text="Save Edit"/>
    </LinearLayout>

    <Button
        android:id="@+id/exit_event_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="end"
        android:background="@drawable/shape_day_event_rectangle"
        android:padding="10dp"
        android:textSize="50dp"
        android:textColor="@color/gray"
        android:text="GO BACK"/>

</LinearLayout>